fix: correction test intégration + profil test